substrate/frame/support/test/tests/pallet_ui/trait_no_supertrait.stderr
error: Invalid pallet::trait, expected explicit `frame_system::Config` as supertrait, found none. (try `pub trait Config: frame_system::Config { ...` or `pub trait Config<I: 'static>: frame_system::Config { ...`). To disable this check, use `#[pallet::disable_frame_system_supertrait_check]`
  --> tests/pallet_ui/trait_no_supertrait.rs:24:2
   |
24 |     pub trait Config {
   |     ^^^
